<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sm_pc.myapplication.account.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/beige"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="332dp"
            android:layout_height="184dp"
            app:srcCompat="@drawable/login_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/textForgotPW"
            android:textColor="@color/purple"
            android:textSize="22dp"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/textResetMsg"
            android:textColor="@color/purple"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:textColorHint="@color/purple" />


        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/lightBlue"
            android:text="@string/buttonSendResetEmail"
            android:textColor="@color/purple" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="78dp"
        android:layout_height="72dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>