<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sm_pc.myapplication.account.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/beige"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:srcCompat="@drawable/login_logo"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="82dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hintEmail"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/purple" />


        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hintPassword"
            android:gravity="center"
            android:inputType="textPassword"
            android:textColorHint="@color/purple" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/lightBlue"
            android:text="@string/buttonLogin"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/purple" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/buttonFindPw"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/purple" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/buttonSignUp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/purple"
                tools:ignore="SpUsage" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="78dp"
        android:layout_height="72dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>