<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sm_pc.myapplication.setting.Baby.BabyCreateActivity"
    android:background="@color/beige">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:gravity="center"
        android:text="Create Baby"
        android:textColor="@color/purple"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textBabyName"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/textBabyName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBabyName">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/textBabyGender"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/buttonBoy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textBoy"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/buttonGirl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textGirl"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/buttonUndecided"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textUnknown"
            android:textSize="18sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="40dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/textBabyBirth"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/lightBlue"
            android:text="달력보기"
            android:textColor="@color/purple" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="217dp"
        android:layout_height="151dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.626"
        app:srcCompat="@drawable/login_logo" />

    <Button
        android:id="@+id/buttonReturnBaby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:text="돌아가기"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <Button
        android:id="@+id/buttonSaveBaby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="저장"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toEndOf="@+id/buttonReturnBaby"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889" />

</android.support.constraint.ConstraintLayout>